<?xml version="1.0"?>
<package format="3">
  <name>openeb</name>
  <version>4.2.0</version>
  <description>prophesee openeb package info for ROS build farm</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache2</license>

  <!-- openeb dependencies -->
  <buildtool_depend>wget</buildtool_depend>
  <buildtool_depend>unzip</buildtool_depend>
  <buildtool_depend>curl</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>hdf5-tools</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <depend>boost</depend>
  <depend>libusb-1.0</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>libusb</depend>
  <depend>libusb-dev</depend>
  <depend>libhdf5-dev</depend>
  <depend>libglew-dev</depend>
  <depend>libglfw3-dev</depend>
  <depend>ffmpeg</depend>
  <depend>libopencv-dev</depend>
  <depend>libopenscenegraph</depend>
  <test_depend>gtest</test_depend>
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
